--- a/models/deploy/marketplace/chainbase/chainbase_utils__.yml
+++ b/models/deploy/marketplace/chainbase/chainbase_utils__.yml
@@ -15,4 +15,5 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
