--- a/models/deploy/marketplace/credmark/credmark_utils__.yml
+++ b/models/deploy/marketplace/credmark/credmark_utils__.yml
@@ -13,3 +13,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
