--- a/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
+++ b/models/deploy/marketplace/footprint/footprint_utils__footprint_utils.yml
@@ -16,3 +16,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
