--- a/models/deploy/marketplace/playgrounds/playgrounds__.yml
+++ b/models/deploy/marketplace/playgrounds/playgrounds__.yml
@@ -24,6 +24,7 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
           - test_udf:
               name: test_playgrounds__query_subgraph_status_200_total_pool_count
@@ -40,5 +41,6 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
 
