--- a/models/deploy/marketplace/snapshot/snapshot__ .yml
+++ b/models/deploy/marketplace/snapshot/snapshot__ .yml
@@ -19,3 +19,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
