--- a/models/deploy/marketplace/solscan/solscan__.yml
+++ b/models/deploy/marketplace/solscan/solscan__.yml
@@ -11,3 +11,4 @@ models:
                 , {'limit': 10}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
