--- a/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
+++ b/models/deploy/marketplace/alchemy/alchemy_transfers__alchemy_utils.yml
@@ -10,4 +10,5 @@ models:
                 'eth-mainnet', [{'fromBlock': '0x0', 'toBlock': 'latest', 'toAddress': '0x5c43B1eD97e52d009611D89b74fA829FE4ac56b1', 'category': ['external'], 'withMetadata': True, 'excludeZeroValue': True}]
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
