--- a/models/deploy/marketplace/bitquery/bitquery__.yml
+++ b/models/deploy/marketplace/bitquery/bitquery__.yml
@@ -34,5 +34,6 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
 
