--- a/models/deploy/marketplace/blockpour/blockpour_utils__.yml
+++ b/models/deploy/marketplace/blockpour/blockpour_utils__.yml
@@ -12,6 +12,7 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
       - name: post
         tests:
@@ -27,3 +28,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
