--- a/models/deploy/marketplace/cmc/cmc__.yml
+++ b/models/deploy/marketplace/cmc/cmc__.yml
@@ -11,3 +11,4 @@ models:
                 , {'interval': 'hourly', 'time_period': 'hourly', 'time_start': 1691524740, 'time_end': 1691528400, 'id': '15478,15479'}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
