--- a/models/deploy/marketplace/deepnftvalue/deepnftvalue__.yml
+++ b/models/deploy/marketplace/deepnftvalue/deepnftvalue__.yml
@@ -11,3 +11,4 @@ models:
                 , {'limit': 5}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
