--- a/models/deploy/marketplace/defillama/defillama__.yml
+++ b/models/deploy/marketplace/defillama/defillama__.yml
@@ -11,3 +11,4 @@ models:
                 , {}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
