--- a/models/deploy/marketplace/helius/helius_apis__helius_utils.yml
+++ b/models/deploy/marketplace/helius/helius_apis__helius_utils.yml
@@ -17,6 +17,7 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
       - name: balances
         tests:
@@ -27,6 +28,7 @@ models:
                 , '231B38ZpsbtrWbsBEjSXfjVj9JT2XyuNXy4f98V5NXxg'
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
       - name: parse_transactions
         tests:
@@ -40,4 +42,5 @@ models:
                 ]
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
 
