--- a/models/deploy/marketplace/reservoir/reservoir__.yml
+++ b/models/deploy/marketplace/reservoir/reservoir__.yml
@@ -11,3 +11,4 @@ models:
                 , {'collection': '0x8d04a8c79ceb0889bdd12acdf3fa9d207ed3ff63'}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
