--- a/models/deploy/marketplace/stakingrewards/stakingrewards__ .yml
+++ b/models/deploy/marketplace/stakingrewards/stakingrewards__ .yml
@@ -20,3 +20,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
