--- a/models/deploy/marketplace/strangelove/strangelove__.yml
+++ b/models/deploy/marketplace/strangelove/strangelove__.yml
@@ -13,3 +13,4 @@ models:
                 }
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
