--- a/models/deploy/marketplace/subquery/subquery__.yml
+++ b/models/deploy/marketplace/subquery/subquery__.yml
@@ -11,3 +11,4 @@ models:
                 , {'query':'query { _mmrs (first: 5) { nodes { key } } }'}
               assertions:
                 - result:status_code = 200
+                - result:error IS NULL
