- turn off blockpour tests instead of deleting the tests

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,13 @@ models:
 
 tests:
   +store_failures: true # all tests
+  livequery_models:
+    deploy:
+      marketplace:
+        blockpour:
+          # TODO: enable tests for blockpour once we get an API key
+          +enabled: false
+
 
 on-run-start:
   - "{{ create_sps() }}"
