--- a/.github/workflows/dbt_test.yml
+++ b/.github/workflows/dbt_test.yml
@@ -34,7 +34,7 @@ jobs:
     with:
       warehouse: DBT_CLOUD
       environment: workflow_prod
-      command: test --selector test_udfs
+      command: test --selector test_udfs --threads 24
 
   dispached:
     uses: ./.github/workflows/dbt.yml
@@ -43,4 +43,4 @@ jobs:
     with:
       warehouse: ${{ inputs.warehouse }}
       environment: workflow_${{ inputs.environment }}
-      command: test --selector test_udfs
+      command: test --selector test_udfs --threads 24
