--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -67,6 +67,7 @@ vars:
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
   REST_API_PREFIX_PROD: bqco8lkjsb.execute-api.us-east-1.amazonaws.com/prod/
   REST_API_PREFIX_DEV: u5z0tu43sc.execute-api.us-east-1.amazonaws.com/stg/
-  API_INTEGRATION: AWS_LIVE_QUERY{{ '_STG' if target.name != 'prod' else ''  }}
+  API_INTEGRATION: AWS_LIVE_QUERY{{ "_STG" if target.name != "prod" else "" }}
   AWS_REGION: us-east-1
-  STUDIO_TEST_USER_ID: 98d15c30-9fa5-43cd-9c69-3d4c0bb269f5
+  STUDIO_TEST_USER_ID: '{{ env_var("STUDIO_TEST_USER_ID", "98d15c30-9fa5-43cd-9c69-3d4c0bb269f5") }}'
+
