--- a/profiles.yml
+++ b/profiles.yml
@@ -1,5 +1,5 @@
 livequery:
-  target: prod
+  target: dev
   outputs:
     dev:
       type: snowflake
@@ -10,10 +10,10 @@ livequery:
       region: "{{ env_var('REGION') }}"
       database: "{{ env_var('DATABASE') }}"
       warehouse: "{{ env_var('WAREHOUSE') }}"
-      schema: SILVER
-      threads: 4
+      schema: LIVE
+      threads: 24
       client_session_keep_alive: False
-      query_tag: livequery_curator
+      query_tag: dbt-livequery-dev
     prod:
       type: snowflake
       account: "{{ env_var('ACCOUNT') }}"
@@ -23,7 +23,20 @@ livequery:
       region: "{{ env_var('REGION') }}"
       database: "{{ env_var('DATABASE') }}"
       warehouse: "{{ env_var('WAREHOUSE') }}"
-      schema: SILVER
-      threads: 4
+      schema: LIVE
+      threads: 24
       client_session_keep_alive: False
-      query_tag: livequery_curator
+      query_tag: dbt-livequery-prod
+    hosted:
+      type: snowflake
+      account: "{{ env_var('ACCOUNT') }}"
+      role: "{{ env_var('ROLE') }}"
+      user: "{{ env_var('USER') }}"
+      password: "{{ env_var('PASSWORD') }}"
+      region: "{{ env_var('REGION') }}"
+      database: "{{ env_var('DATABASE') }}"
+      warehouse: "{{ env_var('WAREHOUSE') }}"
+      schema: LIVE
+      threads: 24
+      client_session_keep_alive: False
+      query_tag: dbt-livequery-hosted-prod
