--- a/.github/workflows/dbt_test.yml
+++ b/.github/workflows/dbt_test.yml
@@ -34,7 +34,7 @@ jobs:
     secrets: inherit
     with:
       warehouse: DBT_CLOUD
-      environment: workflow_prod
+      environment: prod
       command: test --selector test_udfs --threads 24
 
   dispached:
