- add integration test

--- a/models/deploy/core/_utils.yml
+++ b/models/deploy/core/_utils.yml
@@ -4,6 +4,7 @@ models:
       - name: udf_introspect
         tests:
           - test_udf:
+              name: test___utils_udf_introspect
               args: "'hello'"
               assertions:
                 - result = 'hello'
