--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -56,7 +56,7 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt ${{ inputs.command }}
+          dbt ${{ inputs.command }} --target ${{ inputs.environment }}
       - name: Store logs
         uses: actions/upload-artifact@v3
         with:
