STREAM-383/STREAM-668/deploy-to-hosted-account (#54)
* - removed utils.register_secret
- add hosted profile

* - refactor project variables to use config object

* - add \n

* - uncommented code

* - update return type

* - reverted name truncation

* - change GHA workflow environments to align with dbt profiles

* - add hosted option to enviornment dropdown

* - add integration test

* Update dbt_project.yml

Add INTERNAL_DEV role to stg profile

* - fix grants
- enforce dbt target

--- a/.github/workflows/dbt_udf_test.yml
+++ b/.github/workflows/dbt_udf_test.yml
@@ -34,14 +34,14 @@ jobs:
     secrets: inherit
     with:
       warehouse: DBT_CLOUD
-      environment: workflow_prod
+      environment: prod
       command: test --selector test_udfs --threads 24
 
-  dispached:
+  dispatched:
     uses: ./.github/workflows/dbt.yml
     if:  github.event_name == 'workflow_dispatch'
     secrets: inherit
     with:
       warehouse: ${{ inputs.warehouse }}
-      environment: workflow_${{ inputs.environment }}
+      environment: ${{ inputs.environment }}
       command: test --selector test_udfs --threads 24
