--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -30,6 +30,8 @@ models:
       +materialized: ephemeral
       core:
         +tags: core
+        secrets:
+          +enabled: '{{ true if env_var("ENABLE_SNOWFLAKE_SECRETS", "") else false }}'
       evm:
         +tags: evm
       marketplace:
@@ -43,7 +45,6 @@ tests:
         blockpour:
           # TODO: enable tests for blockpour once we get an API key
           +enabled: false
-
 
 on-run-start:
   - "{{ create_sps() }}"
@@ -66,7 +67,6 @@ vars:
   STREAMLINE_INVOKE_STREAMS: False
   STREAMLINE_USE_DEV_FOR_EXTERNAL_TABLES: False
   STUDIO_TEST_USER_ID: '{{ env_var("STUDIO_TEST_USER_ID", "98d15c30-9fa5-43cd-9c69-3d4c0bb269f5") }}'
-  ENABLE_SNOWFLAKE_SECRETS: '{{ env_var("ENABLE_SNOWFLAKE_SECRETS", "") }}'
 
   API_INTEGRATION: '{{ var("config")[target.name]["API_INTEGRATION"] }}'
   EXTERNAL_FUNCTION_URI: '{{ var("config")[target.name]["EXTERNAL_FUNCTION_URI"] }}'
