--- a/.github/workflows/dbt_udf_test.yml
+++ b/.github/workflows/dbt_udf_test.yml
@@ -11,6 +11,7 @@ on:
         options:
           - dev
           - prod
+          - hosted
         default: dev
       warehouse:
         type: choice
@@ -19,6 +20,7 @@ on:
         options:
           - DBT
           - DBT_CLOUD
+          - XSMALL
         default: DBT
   schedule:
     # Runs “Daily at midnight GMT” (see https://crontab.guru)
@@ -33,7 +35,7 @@ jobs:
     if: github.event_name == 'schedule' || github.event_name == 'push'
     secrets: inherit
     with:
-      warehouse: DBT_CLOUD
+      warehouse: ${{ vars.WAREHOUSE }}
       environment: prod
       command: test --selector test_udfs --threads 24
 
