add xsmall warehouse from hosted environment

--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -21,6 +21,7 @@ on:
           - DBT
           - DBT_CLOUD
           - DBT_EMERGENCY
+          - XSMALL
         default: DBT
       dbt_command:
         type: string
