set environment variables conditionally based on dispatch event abstract target to environment variable use input variable for python version

--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -20,35 +20,29 @@ on:
 env:
   DBT_PROFILES_DIR: ./
 
-  ACCOUNT: "${{ vars.ACCOUNT }}"
-  ROLE: "${{ vars.ROLE }}"
-  USER: "${{ vars.USER }}"
-  PASSWORD: "${{ secrets.PASSWORD }}"
-  REGION: "${{ vars.REGION }}"
-  DATABASE: "${{ vars.DATABASE }}"
-  WAREHOUSE: "${{ vars.WAREHOUSE }}"
-  SCHEMA: "${{ vars.SCHEMA }}"
+  ACCOUNT: ${{ vars.ACCOUNT }}
+  ROLE: ${{ vars.ROLE }}
+  USER: ${{ vars.USER }}
+  PASSWORD: ${{ secrets.PASSWORD }}
+  REGION: ${{ vars.REGION }}
+  DATABASE: ${{ vars.DATABASE }}
+  WAREHOUSE: ${{ vars.WAREHOUSE }}
+  SCHEMA: ${{ vars.SCHEMA }}
+  TARGET: ${{ vars.TARGET }}
 
 jobs:
-  dbt:
+  dispatched:
+    if:  github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     env:
-      DBT_PROFILES_DIR: ./
-      ACCOUNT: "${{ vars.ACCOUNT }}"
-      ROLE: "${{ vars.ROLE }}"
-      USER: "${{ vars.USER }}"
-      PASSWORD: "${{ secrets.PASSWORD }}"
-      REGION: "${{ vars.REGION }}"
-      DATABASE: "${{ vars.DATABASE }}"
       WAREHOUSE: ${{ inputs.warehouse }}
-      SCHEMA: "${{ vars.SCHEMA }}"
     environment:
       name: ${{ inputs.environment }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ inputs.python_version }}
           cache: "pip"
       - name: install dependencies
         run: |
@@ -56,8 +50,34 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt ${{ inputs.command }} --target ${{ inputs.environment }}
+          ${{ inputs.command }}
       - name: Store logs
+        uses: actions/upload-artifact@v3
+        with:
+          name: dbt-logs
+          path: |
+            logs
+            target
+  not_dispatched:
+    if:  github.event_name != 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ inputs.environment }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ inputs.python_version }}
+          cache: "pip"
+      - name: install dependencies
+        run: |
+          pip install -r requirements.txt
+          dbt deps
+      - name: Run DBT Jobs
+        run: |
+          ${{ inputs.command }}
+      - name: Store logs
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: dbt-logs
