--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -52,6 +52,7 @@ jobs:
         run: |
           ${{ inputs.command }}
       - name: Store logs
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: dbt-logs
@@ -76,7 +77,7 @@ jobs:
       - name: Run DBT Jobs
         run: |
           ${{ inputs.command }}
-      - name: Store logs
+    - name: Store logs
         if: always()
         uses: actions/upload-artifact@v3
         with:
