--- a/.github/workflows/dbt_udf_test.yml
+++ b/.github/workflows/dbt_udf_test.yml
@@ -37,7 +37,7 @@ jobs:
     with:
       warehouse: ${{ vars.WAREHOUSE }}
       environment: prod
-      command: test --selector test_udfs --threads 24
+      command: dbt test --selector test_udfs --threads 24
 
   dispatched:
     uses: ./.github/workflows/dbt.yml
@@ -46,4 +46,4 @@ jobs:
     with:
       warehouse: ${{ inputs.warehouse }}
       environment: ${{ inputs.environment }}
-      command: test --selector test_udfs --threads 24
+      command: dbt test --selector test_udfs --threads 24
