STREAM-683/workflow-bugs (#64)
* set environment variables conditionally based on dispatch event
abstract target to environment variable
use input variable for python version

* workflow fixes

* Squashed commit of the following:

commit 3c297e75fbcfc3c91dd820d53db5b53cea925441
Author: Julius Remigio <14811322+juls858@users.noreply.github.com>
Date:   Wed Oct 25 15:08:41 2023 -0700

    set environment variables conditionally based on dispatch event (#63)

    abstract target to environment variable
    use input variable for python version

--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -52,6 +52,33 @@ jobs:
         run: |
           ${{ inputs.command }}
       - name: Store logs
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: dbt-logs
+          path: |
+            logs
+            target
+  not_dispatched:
+    if:  github.event_name != 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ inputs.environment }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ inputs.python_version }}
+          cache: "pip"
+      - name: install dependencies
+        run: |
+          pip install -r requirements.txt
+          dbt deps
+      - name: Run DBT Jobs
+        run: |
+          ${{ inputs.command }}
+      - name: Store logs
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: dbt-logs
