--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -26,7 +26,7 @@ env:
   PASSWORD: ${{ secrets.PASSWORD }}
   REGION: ${{ vars.REGION }}
   DATABASE: ${{ vars.DATABASE }}
-  WAREHOUSE: ${{ vars.WAREHOUSE }}
+  WAREHOUSE: ${{ inputs.warehouse || vars.WAREHOUSE }}
   SCHEMA: ${{ vars.SCHEMA }}
   TARGET: ${{ vars.TARGET }}
 
@@ -45,10 +45,6 @@ jobs:
         run: |
           pip install -r requirements.txt
           dbt deps
-      - name: Set warehouse from input.warehouse if workflow_dispatch
-        if:  github.event_name == 'workflow_dispatch'
-        run: |
-          echo "WAREHOUSE=${{ inputs.warehouse }}" >> "$GITHUB_ENV"
       - name: Run DBT Jobs
         run: |
           ${{ inputs.command }}
