--- a/.github/workflows/dbt_integration_test.yml
+++ b/.github/workflows/dbt_integration_test.yml
@@ -26,14 +26,12 @@ on:
     # Runs “Daily at midnight GMT” (see https://crontab.guru)
     - cron: '0 0 * * *'
 
-concurrency:
-  group: ${{ github.workflow }}
-
 jobs:
   hosted:
     uses: ./.github/workflows/dbt.yml
     if: github.event_name == 'schedule' || github.event_name == 'push'
     secrets: inherit
+    concurrency: ${{ github.workflow }}
     with:
       warehouse: ${{ vars.WAREHOUSE }}
       environment: hosted
@@ -43,6 +41,7 @@ jobs:
     uses: ./.github/workflows/dbt.yml
     if: github.event_name == 'schedule' || github.event_name == 'push'
     secrets: inherit
+    concurrency: ${{ github.workflow }}
     with:
       warehouse: ${{ vars.WAREHOUSE }}
       environment: prod
@@ -52,6 +51,7 @@ jobs:
     uses: ./.github/workflows/dbt.yml
     if:  github.event_name == 'workflow_dispatch'
     secrets: inherit
+    concurrency: ${{ github.workflow }}
     with:
       warehouse: ${{ inputs.warehouse }}
       environment: ${{ inputs.environment }}
