--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -5,7 +5,6 @@ on:
       warehouse:
         required: false
         type: string
-        default: DBT_CLOUD
       environment:
         required: true
         type: string
@@ -47,10 +46,6 @@ jobs:
         run: |
           pip install -r requirements.txt
           dbt deps
-      - name: Set warehouse from input.warehouse if workflow_dispatch
-        if:  github.event_name == 'workflow_dispatch'
-        run: |
-          echo "WAREHOUSE=${{ inputs.warehouse }}" >> "$GITHUB_ENV"
       - name: Run DBT Jobs
         run: |
           ${{ inputs.command }}
@@ -58,7 +53,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: dbt-logs
+          name: logs-${{ inputs.environment }}-${{ github.run_id }}-$GITHUB_RUN_ATTEMPT
           path: |
             logs
             target
