--- a/.github/workflows/dbt.yml
+++ b/.github/workflows/dbt.yml
@@ -53,7 +53,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: logs-${{ inputs.environment }}-${{ github.run_id }}-$GITHUB_RUN_ATTEMPT
+          name: logs-${{ inputs.environment }}-${{ github.run_number }}-${{ github.run_attempt }}
           path: |
             logs
             target
