--- a/models/deploy/core/live.yml
+++ b/models/deploy/core/live.yml
@@ -22,3 +22,4 @@ models:
                 'https://httpbin.org/post', 'foo'
               assertions:
                 - result:data = 'foo'
+              enabled: false
