--- a/models/deploy/core/live.yml
+++ b/models/deploy/core/live.yml
@@ -9,17 +9,19 @@ models:
               args: |
                 'https://httpbin.org/post', {'foo': 'bar'}
               assertions:
+                - result:data.json is not null
                 - result:data.json = OBJECT_CONSTRUCT('foo', 'bar')
           - test_udf:
               name: test__live_udf_api_post_data_array
               args: |
                 'https://httpbin.org/post', ['foo', 'bar']
               assertions:
+                - result:data.json is not null
                 - result:data.json = ARRAY_CONSTRUCT('foo', 'bar')
           - test_udf:
               name: test__live_udf_api_post_data_string
               args: |
-                'https://httpbin.org/post', 'foo'
+                'https://httpbin.org/post', 'foo'::VARIANT
               assertions:
-                - result:data = 'foo'
-              enabled: false
+                - result:data.json is not null
+                - result:data.json = 'foo'
