--- a/models/deploy/core/utils.yml
+++ b/models/deploy/core/utils.yml
@@ -197,6 +197,20 @@ models:
                   [['array', [0, 1, 2]]]
               assertions:
                 - result = 'array=%5B0%2C+1%2C+2%5D'
+      - name: udf_int_to_binary
+        tests:
+          - test_udf:
+              name: test_utils__udf_int_to_binary
+              args: 123456789
+              assertions: 
+              - result = '111010110111100110100010101'
+      - name: udf_binary_to_int
+        tests:
+          - test_udf:
+              name: test_utils__udf_int_to_binary
+              args: '111010110111100110100010101'
+              assertions: 
+              - result = '123456789'
       - name: udf_evm_decode_log
         tests:
           - test_udf:
